--- a/.github/workflows/youtube-fetch.yml
+++ b/.github/workflows/youtube-fetch.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   fetch-and-post:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -17,7 +18,12 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Run script
+      - name: Install dependencies and run script
+        env:
+          YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
+          WP_ENDPOINT: ${{ secrets.WP_ENDPOINT }}
+          WP_USER: ${{ secrets.WP_USER }}
+          WP_PASS: ${{ secrets.WP_PASS }}
         run: |
           pip install requests
           python fetch_youtube.py
