--- a/.github/workflows/youtube-fetch.yml
+++ b/.github/workflows/youtube-fetch.yml
@@ -1,8 +1,8 @@
 name: YouTube Fetch
 
 on:
-  schedule:
-    - cron: '*/5 * * * *'  # 5分ごとに実行
+  #schedule:
+  #  - cron: '*/5 * * * *'  # 5分ごとに実行
   workflow_dispatch:
 
 jobs:
